# moonbase-licensing

./: .gitignore  Cargo.toml  README.md
examples/: cli.rs
src/: activation.rs  claims.rs  device_token.rs  lib.rs
