[package]
name = "moonbase-licensing"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
backon = "1.5.2"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
ureq = { version = "3.1.0", features = ["json"] }
