[package]
name = "moonbase-licensing"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
description = "Client for moonbase.sh licensing system"

[dependencies]
backon = "1.5.2"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
ureq = { version = "3.1.0", features = ["json"] }

# Dependencies for CLI example
[dev-dependencies]
anyhow = "1.0.99"
console = "0.16.0"
dialoguer = "0.12.0"
hardware-id = "0.3.0"
hostname = "0.4.0"
indicatif = "0.18.0"
open = "5.3.2"

[[example]]
name = "cli"
path = "examples/cli.rs"